# cmake-examples

01-basic/B-hello-headers/: CMakeLists.txt
01-basic/C-static-library/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt
01-basic/F-build-type/: CMakeLists.txt
01-basic/G-compile-flags/: CMakeLists.txt
01-basic/H-third-party-library/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary1/: CMakeLists.txt
03-code-generation/configure-files/: CMakeLists.txt  ver.h.in
03-code-generation/protobuf/: CMakeLists.txt
05-unit-testing/boost/: CMakeLists.txt
